src/components/popups/popupBox/popupMenu.css
.popup-box-container {
  opacity: 1;
  border-radius: 10px;
  position: absolute;
  bottom: 0px;
  width: 500px;
  height: 320px;
  left: calc(50% - 250px);
  z-index: 10;
  border-bottom-left-radius: 0px;
  border-bottom-right-radius: 0px;
  overflow: hidden;
}
.popup-resize-handle {
  position: absolute;
  top: 0;
  right: 0;
  width: 18px;
  height: 18px;
  cursor: nesw-resize;
  z-index: 20;
  background: transparent;
}
.popup-resize-handle::before {
  content: "";
  position: absolute;
  top: 4px;
  right: 4px;
  width: 10px;
  height: 10px;
  border-top: 3px solid rgba(128, 128, 128, 0.6);
  border-right: 3px solid rgba(128, 128, 128, 0.6);
  border-radius: 0 6px 0 0;
}
@media screen and (max-width: 576px) {
  .popup-box-container {
    width: 90%;
    left: 5%;
  }
}
.popup-menu-triangle-down {
  float: left;
  margin-left: 59px;
  font-size: 16px;
  text-shadow: 0px 8px 8px rgba(0, 0, 0, 0.16);
  z-index: 0;
}
.popup-menu-triangle-up {
  transform: rotate(180deg);
  position: absolute;
  bottom: 172px;
  margin-left: 60px;
  font-size: 16px;
  text-shadow: 0px 8px 8px rgba(0, 0, 0, 0.16);
  z-index: 0;
}
.delete-highlighter-container {
  position: relative;
}

.popup-close {
  position: absolute;
  top: -30px;
  right: 70px;
  cursor: pointer;
  display: inline-block;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  font-size: 12px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 13px;
  cursor: pointer;
}

